[gd_scene load_steps=9 format=2]

[ext_resource path="res://LifeCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Food_Score.tscn" type="PackedScene" id=2]
[ext_resource path="res://Graphics/Laser.png" type="Texture" id=3]
[ext_resource path="res://Graphics/FastForward.png" type="Texture" id=4]
[ext_resource path="res://Graphics/shifter_icon.png" type="Texture" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://Graphics/Head_Change_Icon.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Slowdown.png" type="Texture" id=8]

[node name="HUD" type="Control" groups=["ScoreGroup"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="free_space" type="MarginContainer" parent="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="life_counter" parent="HBoxContainer" instance=ExtResource( 1 )]

[node name="FF" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slowdown" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shifter" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadChanger" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="free_space2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Food_Score" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 88.0
margin_right = 128.0
rect_min_size = Vector2( 40, 0 )
